--- a/templates/contact_form.html
+++ b/templates/contact_form.html
@@ -53,7 +53,7 @@
             </tr>
         </table>
         <div style="text-align: center;">
-            <button type="submit" class="add-button">Save Contact</button>
+            <button type="submit" class="add-button">Save</button>
             <a href="{{ url_for('contacts_bp.show_contacts') }}" class="button cancel-btn">Cancel</a>
         </div>
     </form>
