--- a/templates/speech_log_form.html
+++ b/templates/speech_log_form.html
@@ -75,7 +75,7 @@
             </tr>
         </table>
         <div style="text-align: center;">
-            <button type="submit" class="add-button">Save Log</button>
+            <button type="submit" class="add-button">Save</button>
             <a href="{{ url_for('speech_logs_bp.show_speech_logs') }}" class="button cancel-btn">Cancel</a>
         </div>
     </form>
