--- a/templates/pathway_library.html
+++ b/templates/pathway_library.html
@@ -50,8 +50,8 @@
             <h2 id="project-name"></h2>
             {% if session.get('user_role') == 'Admin' %}
             <div class="button-group">
-                <button id="edit-project-btn" class="button">Edit</button>
-                <button id="cancel-project-btn" class="button cancel-btn" style="display: none;">Cancel</button>
+                <button id="edit-project-btn" class="btn btn-primary">Edit</button>
+                <button id="cancel-project-btn" class="btn btn-danger" style="display: none;">Cancel</button>
             </div>
             {% endif %}
         </div>
