--- a/templates/users.html
+++ b/templates/users.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1>User Management</h1>
-    <a href="{{ url_for('users_bp.user_form') }}" class="add-button">Add New User</a>
+    <a href="{{ url_for('users_bp.user_form') }}" class="btn btn-primary">Add New User</a>
 
     <table>
         <thead>
@@ -34,8 +34,8 @@
                 <td>{{ user.Date_Created.strftime('%Y-%m-%d') }}</td>
                 <td>
                     <div class="action-links">
-                        <a href="{{ url_for('users_bp.user_form', user_id=user.id) }}" class="button icon-btn" title="Edit"><i class="fas fa-edit"></i></a>
-                        <button class="button delete-btn icon-btn" onclick="showDeleteModal({{ user.id }})" title="Delete"><i class="fas fa-trash-alt"></i></button>
+                        <a href="{{ url_for('users_bp.user_form', user_id=user.id) }}" class="icon-btn" title="Edit"><i class="fas fa-edit"></i></a>
+                        <button class="delete-btn icon-btn" onclick="showDeleteModal({{ user.id }})" title="Delete"><i class="fas fa-trash-alt"></i></button>
                     </div>
                 </td>
             </tr>
