--- a/templates/contact_form.html
+++ b/templates/contact_form.html
@@ -52,9 +52,9 @@
                 <td><input type="checkbox" id="dtm" name="dtm" {% if contact and contact.DTM %}checked{% endif %}></td>
             </tr>
         </table>
-        <div style="text-align: center;">
-            <button type="submit" class="add-button">Save</button>
-            <a href="{{ url_for('contacts_bp.show_contacts') }}" class="button cancel-btn">Cancel</a>
+        <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="{{ url_for('contacts_bp.show_contacts') }}" class="btn btn-danger">Cancel</a>
         </div>
     </form>
 {% endblock %}
