--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1>Contacts</h1>
-    <a href="{{ url_for('contacts_bp.contact_form') }}" class="add-button">Add New Contact</a>
+    <a href="{{ url_for('contacts_bp.contact_form') }}" class="btn btn-primary">Add New Contact</a>
     <table>
         <thead>
             <tr>
@@ -37,8 +37,8 @@
                 <td>{{ contact.Date_Created.strftime('%Y-%m-%d') }}</td>
                 <td>
                     <div class="action-links">
-                        <a href="{{ url_for('contacts_bp.contact_form', contact_id=contact.id) }}" class="button icon-btn" title="Edit"><i class="fas fa-edit"></i></a>
-                        <button class="button delete-btn icon-btn" onclick="openModal({{ contact.id }})" title="Delete"><i class="fas fa-trash-alt"></i></button>
+                        <a href="{{ url_for('contacts_bp.contact_form', contact_id=contact.id) }}" class="icon-btn" title="Edit"><i class="fas fa-edit"></i></a>
+                        <button class="delete-btn icon-btn" onclick="openModal({{ contact.id }})" title="Delete"><i class="fas fa-trash-alt"></i></button>
                     </div>
                 </td>
             </tr>
@@ -51,8 +51,8 @@
             <span class="close" onclick="closeModal()">&times;</span>
             <p>Are you sure you want to delete this contact?</p>
             <form id="deleteForm" method="POST" action="">
-                <button type="submit" class="button delete-btn">Delete</button>
-                <button type="button" class="button" onclick="closeModal()">Cancel</button>
+                <button type="submit" class="delete-btn">Delete</button>
+                <button type="button" class="btn" onclick="closeModal()">Cancel</button>
             </form>
         </div>
     </div>
