--- a/templates/speech_log_form.html
+++ b/templates/speech_log_form.html
@@ -74,9 +74,9 @@
                 <td><input type="text" id="evaluator" name="evaluator" value="{{ log.Evaluator if log else '' }}"></td>
             </tr>
         </table>
-        <div style="text-align: center;">
-            <button type="submit" class="add-button">Save</button>
-            <a href="{{ url_for('speech_logs_bp.show_speech_logs') }}" class="button cancel-btn">Cancel</a>
+        <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="{{ url_for('speech_logs_bp.show_speech_logs') }}" class="btn btn-danger">Cancel</a>
         </div>
     </form>
 
