--- a/templates/user_form.html
+++ b/templates/user_form.html
@@ -48,8 +48,8 @@
             </tr>
         </table>
         <div style="text-align: center;">
-            <button type="submit" class="add-button">{{ 'Save User' if user else 'Add User' }}</button>
-            <a href="{{ url_for('users_bp.show_users') }}" class="button cancel-btn">Cancel</a>
+            <button type="submit" class="btn btn-primary">{{ 'Save User' if user else 'Add User' }}</button>
+            <a href="{{ url_for('users_bp.show_users') }}" class="btn btn-danger">Cancel</a>
         </div>
     </form>
 
